# predictive-maintenance

./: .env.example  .gitignore  01-requirements.md  02-architecture.md  03-analysis.md  04-action-plan.md  README.md  pyproject.toml  requirements-dev.txt
agents/: create_agents.py  document_agent.py  orchestrator_agent.py  requirements.txt  research_agent.py  test_mcp_run.py  test_openapi_run.py
backend/: Dockerfile.mcp  function_app.py  host.json  requirements-mcp.txt  requirements.txt
docs/: architecture-decisions.md  architecture-history.md  design-system.md  document-ingestion.md  entra-role-assignment.md  foundry-followup-analysis.md  frontend-design.md  hackathon-scope.md  operations-runbook.md  operator-followup-scenario-0049.md  platform-reference.md  signalr-contract.md  statement-update-proposals.md
frontend/: README.md  auth-popup.html  index.html  package-lock.json  package.json  playwright.config.ts  staticwebapp.config.json  vite.config.e2e.ts  vite.config.ts  vitest.config.ts
infra/: architecture.drawio  diagram.md  main.bicep  main.json
mcp-servers/: requirements.txt.bak
scripts/: clean_test_data.py  create_search_indexes.py  recover_live_incident.py  reset_dev_data.py  seed_cosmos.py  setup_entra.sh  simulate_alerts.py  test_mcp_servers.py  upload_documents.py
tasks/: README.md  T-001-architecture-presentation.md  T-002-final-video.md  T-010-cartoon-animation.md  T-020-cosmos-db.md  T-021-mock-data.md  T-022-service-bus.md  T-023-ingestion-api.md  T-024-durable-orchestrator.md  T-025-research-agent.md  T-026-document-agent.md  T-035-rbac.md  (+34 more)
(+209 files in other folders)
